<?xml version="1.0"?>
<package format="2">
  <name>sa_ros_nav_controller</name>
  <version>0.0.0</version>
  <description>The sa_ros_nav_controller package</description>

  <maintainer email="jorge.d.ribeiro@inesctec.pt">Jorge D. Ribeiro</maintainer>
  <license>TODO</license>
  <author email="jorge.d.ribeiro@inesctec.pt">Jorge D. Ribeiro</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <export></export>
</package>
